--- a/css/default.css
+++ b/css/default.css
@@ -10,7 +10,7 @@ Author URI: http://dev7studios.com
 
 .theme-default .nivoSlider {
 	position:relative;
-	background:#fff url(loading.gif) no-repeat 50% 50%;
+	background:#fff url(../img/loading.gif) no-repeat 50% 50%;
     margin-bottom:50px;
     -webkit-box-shadow: 0px 1px 5px 0px #4a4a4a;
     -moz-box-shadow: 0px 1px 5px 0px #4a4a4a;
@@ -35,7 +35,7 @@ Author URI: http://dev7studios.com
 	display:inline-block;
 	width:22px;
 	height:22px;
-	background:url(bullets.png) no-repeat;
+	background:url(../img/bullets.png) no-repeat;
 	text-indent:-9999px;
 	border:0;
 	margin: 0 2px;
@@ -48,7 +48,7 @@ Author URI: http://dev7studios.com
 	display:block;
 	width:30px;
 	height:30px;
-	background:url(arrows.png) no-repeat;
+	background:url(../img/arrows.png) no-repeat;
 	text-indent:-9999px;
 	border:0;
 }
